Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 trigger:
 - master
 variables:
-- group: keyvault
+- group: iotc-producttruth
 - name: buildConfiguration
   value: 'Release'
 steps:
